--- a/src/composer.json
+++ b/src/composer.json
@@ -8,7 +8,10 @@
         "ext-iconv": "*",
         "knplabs/knp-paginator-bundle": "^5.2",
         "liip/imagine-bundle": "^2.3",
+        "rollerworks/password-strength-validator": "^1.4",
         "sensio/framework-extra-bundle": "^5.5",
+        "spatie/calendar-links": "^1.6",
+        "spatie/icalendar-generator": "^2.2",
         "stof/doctrine-extensions-bundle": "^1.4",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.1.*",
@@ -22,6 +25,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "5.2.*",
         "symfony/serializer": "5.1.*",
+        "symfony/translation": "5.2.*",
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.2.*",
         "symfony/yaml": "5.1.*",
