--- a/src/composer.json
+++ b/src/composer.json
@@ -29,7 +29,8 @@
         "symfony/twig-pack": "^1.0",
         "symfony/validator": "5.2.*",
         "symfony/yaml": "5.1.*",
-        "symfonycasts/reset-password-bundle": "^1.8"
+        "symfonycasts/reset-password-bundle": "^1.8",
+        "tattali/calendar-bundle": "^1.2"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
