suppression de packages symfony non utilisés +modifs mineures de style du calendrier

--- a/src/.env
+++ b/src/.env
@@ -22,6 +22,7 @@ APP_SECRET=a01bdb2503c86b1bb3bad2ff71c19de5
 
 ###> symfony/mailer ###
 MAILER_DSN=smtp://741c62e68c560c:3ab1d2088187b6@smtp.mailtrap.io:25
+#MAILER_DSN=smtp://ex:ex@smtp.auth.orange-business.com:587
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
