--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -11,6 +11,7 @@ security:
                 class: App\Entity\Salarie
                 property: email
     role_hierarchy:
+        ROLE_ADMIN: [ROLE_RESPONSABLE_RH]
         ROLE_RESPONSABLE_RH: [ROLE_RESPONSABLE_SERVICE]
         ROLE_RESPONSABLE_SERVICE: [ROLE_SALARIE]
     firewalls:
